Pad top of Carousel slides to prevent info banner overflow

--- a/packages/frontend/src/features/RecommendedProducts/index.module.css
+++ b/packages/frontend/src/features/RecommendedProducts/index.module.css
@@ -57,4 +57,6 @@
 
 .carousel-slide {
     cursor: pointer;
+
+    padding: 2px 0px 0px;
 }
